--- a/app/src/main/res/layout/item_currency.xml
+++ b/app/src/main/res/layout/item_currency.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="currency"
-            type="com.mbobiosio.currencyconverter.model.Currencies" />
+            type="com.mbobiosio.currencyconverter.domain.model.Currencies" />
 
         <variable
             name="viewModel"
