--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.about.AboutFragment">
+    tools:context=".presentation.history.HistoryFragment">
 
     <TextView
         android:layout_width="wrap_content"
