--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/aboutFragment"
         android:icon="@drawable/ic_more_horiz"
-        android:title="@string/about"/>
+        android:title="@string/history"/>
 
 </menu>
