--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -37,8 +37,8 @@
 
     <fragment
         android:id="@+id/aboutFragment"
-        android:name="com.mbobiosio.currencyconverter.presentation.about.AboutFragment"
+        android:name="com.mbobiosio.currencyconverter.presentation.history.HistoryFragment"
         android:label="About"
-        tools:layout="@layout/fragment_about"/>
+        tools:layout="@layout/fragment_history"/>
 
 </navigation>
